--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,9 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+/src/environments/**
 
 # System Files
 .DS_Store
 Thumbs.db
-src/environments
+
