--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "11.0.0",
+    "@angular-builders/custom-webpack": "^11.0.0",
     "@angular-devkit/build-angular": "~0.1100.7",
     "@angular/cli": "~11.0.7",
     "@angular/compiler-cli": "~11.0.9",
@@ -35,6 +35,7 @@
     "@types/node": "^12.11.1",
     "autoprefixer": "^9.8.6",
     "codelyzer": "^6.0.0",
+    "dotenv": "^8.2.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
@@ -44,6 +45,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "ngx-tailwind": "^1.2.0",
     "postcss": "^7.0.35",
+    "postcss-scss": "^2.1.1",
     "protractor": "~7.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "ts-node": "~8.3.0",
