--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^11.0.0",
     "@angular-devkit/build-angular": "~0.1100.7",
-    "@angular/cli": "~11.0.7",
+    "@angular/cli": "^11.2.6",
     "@angular/compiler-cli": "~11.0.9",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/jasmine": "~3.6.0",
